[gd_scene load_steps=7 format=2]

[ext_resource path="res://res/ui/bts1/pressed.tres" type="StyleBox" id=1]
[ext_resource path="res://res/ui/bts1/normal.tres" type="StyleBox" id=2]
[ext_resource path="res://res/ui/bts1/hover.tres" type="StyleBox" id=3]
[ext_resource path="res://pages/sheets/quiz/page_prepare_quiz.gd" type="Script" id=4]
[ext_resource path="res://res/ui/checkbox/checked2.png" type="Texture" id=5]
[ext_resource path="res://res/ui/checkbox/unchecked2.png" type="Texture" id=6]

[node name="Page_prepare_Quiz" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 15

[node name="Titre" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 520.0
margin_bottom = 35.0

[node name="Bt_back" type="Button" parent="VBoxContainer/Titre"]
margin_right = 163.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_RETOUR"

[node name="Titre" type="Label" parent="VBoxContainer/Titre"]
margin_left = 167.0
margin_right = 520.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Quiz "
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 520.0
margin_bottom = 54.0

[node name="Nb_fiches" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 520.0
margin_bottom = 98.0

[node name="l1" type="Label" parent="VBoxContainer/Nb_fiches"]
margin_right = 136.0
margin_bottom = 29.0
text = "KEY_V_SEL"

[node name="Nb_fiches" type="Label" parent="VBoxContainer/Nb_fiches"]
margin_left = 140.0
margin_right = 154.0
margin_bottom = 29.0
text = "0"

[node name="l3" type="Label" parent="VBoxContainer/Nb_fiches"]
margin_left = 158.0
margin_right = 302.0
margin_bottom = 29.0
text = "KEY_FICHES"

[node name="Nb_elts" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 113.0
margin_right = 520.0
margin_bottom = 142.0

[node name="l1" type="Label" parent="VBoxContainer/Nb_elts"]
margin_right = 140.0
margin_bottom = 29.0
text = "KEY_P_TOT"

[node name="Nb_elts" type="Label" parent="VBoxContainer/Nb_elts"]
margin_left = 144.0
margin_right = 158.0
margin_bottom = 29.0
text = "0"

[node name="l3" type="Label" parent="VBoxContainer/Nb_elts"]
margin_left = 162.0
margin_right = 348.0
margin_bottom = 29.0
text = "KEY_ELEMENTS"

[node name="Presets" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 157.0
margin_right = 520.0
margin_bottom = 199.0
custom_constants/separation = 10

[node name="bt_preset_repeat" type="Button" parent="VBoxContainer/Presets"]
margin_right = 255.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_PRST_REPEAT"

[node name="Bt_preset_10_q_no_repeat" type="Button" parent="VBoxContainer/Presets"]
margin_left = 265.0
margin_right = 520.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_PRESET_Q10"

[node name="Repeat" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 214.0
margin_right = 520.0
margin_bottom = 262.0

[node name="Label" type="Label" parent="VBoxContainer/Repeat"]
margin_top = 9.0
margin_right = 147.0
margin_bottom = 38.0
text = "KEY_REPETS"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Repeat"]
margin_left = 151.0
margin_right = 199.0
margin_bottom = 48.0
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked = ExtResource( 6 )

[node name="Max_q" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 277.0
margin_right = 520.0
margin_bottom = 316.0

[node name="Label" type="Label" parent="VBoxContainer/Max_q"]
margin_top = 5.0
margin_right = 182.0
margin_bottom = 34.0
text = "KEY_NB_MAXQ"

[node name="InpNbMaxQ" type="LineEdit" parent="VBoxContainer/Max_q"]
margin_left = 186.0
margin_right = 280.0
margin_bottom = 39.0
text = "10"
max_length = 5
placeholder_text = "-1"

[node name="Mode" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 331.0
margin_right = 520.0
margin_bottom = 366.0

[node name="Label" type="Label" parent="VBoxContainer/Mode"]
margin_top = 3.0
margin_right = 131.0
margin_bottom = 32.0
text = "KEY_MODE"

[node name="ModeOptBt" type="OptionButton" parent="VBoxContainer/Mode"]
margin_left = 135.0
margin_right = 312.0
margin_bottom = 35.0
text = "KEY_CARTES"
items = [ "KEY_CARTES", null, false, 0, null, "KEY_ECRIRE", null, false, 1, null ]
selected = 0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 381.0
margin_right = 520.0
margin_bottom = 385.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 400.0
margin_right = 520.0
margin_bottom = 445.0
alignment = 1

[node name="Bt_lancer" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 142.0
margin_right = 377.0
margin_bottom = 45.0
rect_min_size = Vector2( 180, 45 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_LANCER_QUIZ"

[connection signal="pressed" from="VBoxContainer/Titre/Bt_back" to="." method="_on_Bt_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Presets/bt_preset_repeat" to="." method="_on_bt_preset_repeat_pressed"]
[connection signal="pressed" from="VBoxContainer/Presets/Bt_preset_10_q_no_repeat" to="." method="_on_Bt_preset_10_q_no_repeat_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Bt_lancer" to="." method="_on_Bt_lancer_pressed"]
